--- a/index.html
+++ b/index.html
@@ -8,42 +8,49 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div class="calculator">
-        <div class="calc-display">
-            <div class="top-line"></div>
-            <div class="bottom-line"></div>
-        </div>
-        <div class="calc-buttons">
-            <div class="calc-buttons-row">
-                <button class="calc-button operator-button" id="sign">⁺∕₋</button>
-                <button class="calc-button operator-button" id="ac">AC</button>
-                <button class="calc-button operator-button" id="backspace">Del</button>
-                <button class="calc-button operator-button" id="divide">/</button>
+    <div class="main">
+        <div class="calculator">
+            <div class="calc-display">
+                <div class="top-line"></div>
+                <div class="bottom-line"></div>
             </div>
-            <div class="calc-buttons-row">
-                <button class="calc-button" id="7">7</button>
-                <button class="calc-button" id="8">8</button>
-                <button class="calc-button" id="9">9</button>
-                <button class="calc-button operator-button" id="multiply">*</button>
-            </div>
-            <div class="calc-buttons-row">
-                <button class="calc-button" id="4">4</button>
-                <button class="calc-button" id="5">5</button>
-                <button class="calc-button" id="6">6</button>
-                <button class="calc-button operator-button" id="substract">-</button>
-            </div>
-            <div class="calc-buttons-row">
-                <button class="calc-button" id="1">1</button>
-                <button class="calc-button" id="2">2</button>
-                <button class="calc-button" id="3">3</button>
-                <button class="calc-button operator-button" id="add">+</button>
-            </div>
-            <div class="calc-buttons-row">
-                <button class="calc-button double-button" id="0">0</button>
-                <button class="calc-button" id="dot">.</button>
-                <button class="calc-button operator-button" id="equals">=</button>
+            <div class="calc-buttons">
+                <div class="calc-buttons-row">
+                    <button class="calc-button operator-button" id="sign">⁺∕₋</button>
+                    <button class="calc-button operator-button" id="ac">AC</button>
+                    <button class="calc-button operator-button" id="backspace">Del</button>
+                    <button class="calc-button operator-button" id="divide">/</button>
+                </div>
+                <div class="calc-buttons-row">
+                    <button class="calc-button" id="7">7</button>
+                    <button class="calc-button" id="8">8</button>
+                    <button class="calc-button" id="9">9</button>
+                    <button class="calc-button operator-button" id="multiply">*</button>
+                </div>
+                <div class="calc-buttons-row">
+                    <button class="calc-button" id="4">4</button>
+                    <button class="calc-button" id="5">5</button>
+                    <button class="calc-button" id="6">6</button>
+                    <button class="calc-button operator-button" id="substract">-</button>
+                </div>
+                <div class="calc-buttons-row">
+                    <button class="calc-button" id="1">1</button>
+                    <button class="calc-button" id="2">2</button>
+                    <button class="calc-button" id="3">3</button>
+                    <button class="calc-button operator-button" id="add">+</button>
+                </div>
+                <div class="calc-buttons-row">
+                    <button class="calc-button double-button" id="0">0</button>
+                    <button class="calc-button" id="dot">.</button>
+                    <button class="calc-button operator-button" id="equals">=</button>
+                </div>
             </div>
         </div>
     </div>
+
+    <footer>
+        <span>Coded by&nbsp;<a href="https://github.com/SoulmongerV2/Calculator/">SoulmongerV2</a></span>
+        <span>Display font by&nbsp;<a href="https://github.com/keshikan/DSEG">keshikan</a></span>
+    </footer>
 </body>
 </html>
